--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,5 +5,7 @@
 # to the same file or dir, add them to the end under Multiple Owners
 
 # Maptainers
+/code/ @nevimer @magatsuchi @Cyprex
+/modular_zubbers/ @nevimer @magatsuchi @Cyprex
 /_maps/ @miniusAreas @KathrinBailey
 
