--- a/.github/workflows/ci_suite.yml
+++ b/.github/workflows/ci_suite.yml
@@ -60,7 +60,7 @@ jobs:
           bash tools/ci/check_grep.sh
           bash skyrat/tools/skyrat_check_grep.sh # SKYRAT EDIT ADDITION - checking modular_skyrat code
           bash tools/ci/check_misc.sh
-          tools/bootstrap/python tools/validate_dme.py <tgstation.dme
+          tools/bootstrap/python tools/ticked_file_enforcement/ticked_file_enforcement.py < tools/ticked_file_enforcement/schemas/tgstation_dme.json
           tools/bootstrap/python -m tools.maplint.source --github
           tools/build/build --ci lint tgui-test
           tools/bootstrap/python -m define_sanity.check
@@ -69,7 +69,7 @@ jobs:
       - name: Output Annotations
         if: success() || failure()
         run: |
-          ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1    
+          ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
       - name: Process Annotations
         uses: yogstation13/DreamAnnotate@v2
         if: success() || failure()
@@ -175,40 +175,40 @@ jobs:
     steps:
       - run: echo Alternate tests passed.
 
-  compare_screenshots:
-    if: "!contains(github.event.head_commit.message, '[ci skip]') && always()"
-    needs: [run_all_tests, run_alternate_tests]
-    name: Compare Screenshot Tests
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      # If we ever add more artifacts, this is going to break, but it'll be obvious.
-      - name: Download screenshot tests
-        uses: actions/download-artifact@v3
-        with:
-          path: artifacts
-      - name: ls -R
-        run: ls -R artifacts
-      - name: Setup screenshot comparison
-        run: npm i
-        working-directory: tools/screenshot-test-comparison
-      - name: Run screenshot comparison
-        run: node tools/screenshot-test-comparison/index.js artifacts code/modules/unit_tests/screenshots artifacts/screenshot_comparisons
-      # workflow_run does not give you the PR it ran on,
-      # even through the thing literally named "matching pull requests".
-      # However, in GraphQL, you can check if the check suite was ran
-      # by a specific PR, so trusting the (user controlled) action here is okay,
-      # as long as we check it later in show_screenshot_test_results
-      - name: Save PR ID
-        if: failure() && github.event.pull_request
-        run: |
-          echo ${{ github.event.pull_request.number }} > artifacts/screenshot_comparisons/pull_request_number.txt
-      - name: Upload bad screenshots
-        if: failure()
-        uses: actions/upload-artifact@v3
-        with:
-          name: bad-screenshots
-          path: artifacts/screenshot_comparisons
+  # compare_screenshots:
+  #   if: "!contains(github.event.head_commit.message, '[ci skip]') && always()"
+  #   needs: [run_all_tests, run_alternate_tests]
+  #   name: Compare Screenshot Tests
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     # If we ever add more artifacts, this is going to break, but it'll be obvious.
+  #     - name: Download screenshot tests
+  #       uses: actions/download-artifact@v3
+  #       with:
+  #         path: artifacts
+  #     - name: ls -R
+  #       run: ls -R artifacts
+  #     - name: Setup screenshot comparison
+  #       run: npm i
+  #       working-directory: tools/screenshot-test-comparison
+  #     - name: Run screenshot comparison
+  #       run: node tools/screenshot-test-comparison/index.js artifacts code/modules/unit_tests/screenshots artifacts/screenshot_comparisons
+  #     # workflow_run does not give you the PR it ran on,
+  #     # even through the thing literally named "matching pull requests".
+  #     # However, in GraphQL, you can check if the check suite was ran
+  #     # by a specific PR, so trusting the (user controlled) action here is okay,
+  #     # as long as we check it later in show_screenshot_test_results
+  #     - name: Save PR ID
+  #       if: failure() && github.event.pull_request
+  #       run: |
+  #         echo ${{ github.event.pull_request.number }} > artifacts/screenshot_comparisons/pull_request_number.txt
+  #     - name: Upload bad screenshots
+  #       if: failure()
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: bad-screenshots
+  #         path: artifacts/screenshot_comparisons
 
   test_windows:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
