fixes (relevant) linters, adds myself to codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,4 +8,4 @@
 /code/ @nevimer @magatsuchi @Cyprex
 /modular_zubbers/ @nevimer @magatsuchi @Cyprex
 /_maps/ @miniusAreas @KathrinBailey
-
+_maps/map_files/burgerstation/ @BurgerLUA
